--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,3 +7,7 @@ authors = [ "{{authors}}" ]
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+anyhow = "1.0.58"
+serde = { version = "1.0.137", features = ["derive"] }
+serde_json = "1.0.81"
+tokio = { version = "1.19.2", features = ["full"] }
